@@ -2,6 +2,12 @@
 	* audio/midi_drivers/forked_player.cc, conf/XMLEntity.cc: Fixed
 	namespace related errors.
 
+	* conf/Configuration.*: Upon loading up a new file, it clears the
+	previous xmltree, rather then 'kind-of' overwriting it.
+	* conf/XMLEntity.*: Fixed the destructors.
+	* conf/xmain.cc: Added command line option to dump out the exult.cfg
+	also when running it. All other output identical.
+
 2002-01-07  Jeff Freedman  <jeff@amy.nerble.net>
 	* paths.cc: Fixed Offscreen pathfinder bug (that I caused) when
 	'best' was far away.
